package uk.gov.communities.prsdb.webapp.database.entity

import jakarta.persistence.Column
import jakarta.persistence.Entity
import jakarta.persistence.GeneratedValue
import jakarta.persistence.GenerationType
import jakarta.persistence.Id
import jakarta.persistence.JoinColumn
import jakarta.persistence.ManyToOne
import jakarta.persistence.OneToOne

@Entity
class LocalCouncilUser(
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    val id: Long = 0,
) : ModifiableAuditableEntity() {
    @OneToOne(optional = false)
    @JoinColumn(name = "subject_identifier", nullable = false, unique = true)
    lateinit var baseUser: PrsdbUser
        private set

    @Column(nullable = false)
    var isManager: Boolean = false

    @Column(nullable = false)
    var name: String = ""

    @Column(nullable = false)
    var email: String = ""

    @ManyToOne(optional = false)
    @JoinColumn(name = "local_council_id", nullable = false)
    lateinit var localCouncil: LocalCouncil
        private set

    @Column(nullable = false)
    var hasAcceptedPrivacyNotice: Boolean = false
        private set

    constructor(
        id: Long,
        baseUser: PrsdbUser,
        isManager: Boolean,
        localCouncil: LocalCouncil,
        name: String,
        email: String,
        hasAcceptedPrivacyNotice: Boolean,
    ) :
        this(id) {
        this.baseUser = baseUser
        this.isManager = isManager
        this.localCouncil = localCouncil
        this.name = name
        this.email = email
        this.hasAcceptedPrivacyNotice = hasAcceptedPrivacyNotice
    }

    constructor(
        baseUser: PrsdbUser,
        isManager: Boolean,
        localCouncil: LocalCouncil,
        name: String,
        email: String,
        hasAcceptedPrivacyNotice: Boolean,
    ) : this() {
        this.baseUser = baseUser
        this.isManager = isManager
        this.localCouncil = localCouncil
        this.name = name
        this.email = email
        this.hasAcceptedPrivacyNotice = hasAcceptedPrivacyNotice
    }
}
