CREATE TABLE file_upload
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    last_modified_date TIMESTAMPTZ(6),
    created_date       TIMESTAMPTZ(6),
    status             SMALLINT,
    object_key         VARCHAR(255),
    e_tag              VARCHAR(255),
    version_id         VARCHAR(255),
    CONSTRAINT pk_fileupload PRIMARY KEY (id)
);

ALTER TABLE property_compliance
    ADD eicr_id BIGINT;

ALTER TABLE property_compliance
    ADD gas_safety_upload_id BIGINT;

ALTER TABLE property_compliance
    ADD CONSTRAINT uc_propertycompliance_eicr UNIQUE (eicr_id);

ALTER TABLE property_compliance
    ADD CONSTRAINT uc_propertycompliance_gas_safety_upload UNIQUE (gas_safety_upload_id);

ALTER TABLE property_compliance
    ADD CONSTRAINT FK_PROPERTY_COMPLIANCE_EICR_UPLOAD FOREIGN KEY (eicr_id) REFERENCES file_upload (id);

ALTER TABLE property_compliance
    ADD CONSTRAINT FK_PROPERTY_COMPLIANCE_GAS_SAFETY_UPLOAD FOREIGN KEY (gas_safety_upload_id) REFERENCES file_upload (id);

ALTER TABLE property_compliance
DROP
COLUMN eicr_s3_key;

ALTER TABLE property_compliance
DROP
COLUMN gas_safety_cert_s3_key;

ALTER TABLE file_upload
    ADD CONSTRAINT uniqueS3ObjectConstraint UNIQUE (object_key, e_tag, version_id);