ALTER TABLE local_authority
    ADD custodian_code VARCHAR(255);

ALTER TABLE local_authority
    ALTER COLUMN custodian_code SET NOT NULL;

CREATE TABLE address
(
    id                             BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    last_modified_date             TIMESTAMP WITHOUT TIME ZONE,
    created_date                   TIMESTAMP WITHOUT TIME ZONE,
    uprn                           BIGINT       NOT NULL UNIQUE,
    single_line_address            VARCHAR(255) NOT NULL,
    organisation                   VARCHAR(255) NOT NULL,
    sub_building                   VARCHAR(255) NOT NULL,
    building_name                  VARCHAR(255) NOT NULL,
    building_number                VARCHAR(255) NOT NULL,
    street_name                    VARCHAR(255) NOT NULL,
    locality                       VARCHAR(255) NOT NULL,
    town_name                      VARCHAR(255) NOT NULL,
    postcode                       VARCHAR(255) NOT NULL,
    local_authority_custodian_code INTEGER      NOT NULL,
    PRIMARY KEY (id)
);


ALTER TABLE IF EXISTS address
    ADD CONSTRAINT FK_ADDRESS_LOCAL_AUTHORITY FOREIGN KEY (local_authority_custodian_code) REFERENCES local_authority;

