erDiagram

"public.address" }o--o| "public.local_council" : ""
"public.electrical_safety_uploads" |o--|| "public.file_upload" : ""
"public.electrical_safety_uploads" }o--|| "public.property_compliance" : ""
"public.gas_safety_uploads" |o--|| "public.file_upload" : ""
"public.gas_safety_uploads" }o--|| "public.property_compliance" : ""
"public.joint_landlord_invitation" }o--|| "public.property_ownership" : ""
"public.landlord" }o--o| "public.address" : ""
"public.landlord" }o--o| "public.address" : ""
"public.landlord" }o--o| "public.address" : ""
"public.landlord" |o--o| "public.prsdb_user" : ""
"public.landlord" |o--|| "public.registration_number" : ""
"public.landlord_incomplete_properties" }o--|| "public.prsdb_user" : ""
"public.landlord_incomplete_properties" |o--|| "public.saved_journey_state" : ""
"public.local_council_invitation" }o--|| "public.local_council" : ""
"public.local_council_user" }o--|| "public.local_council" : ""
"public.local_council_user" |o--|| "public.prsdb_user" : ""
"public.organisation_governing_body_member" }o--|| "public.address" : ""
"public.organisation_governing_body_member" }o--|| "public.landlord" : ""
"public.organisational_landlord_user" }o--|| "public.prsdb_user" : ""
"public.organisational_landlord_user" }o--|| "public.landlord" : ""
"public.ownership_link" }o--|| "public.landlord" : ""
"public.ownership_link" }o--|| "public.property_ownership" : ""
"public.passcode" |o--o| "public.prsdb_user" : ""
"public.property_compliance" |o--|| "public.property_ownership" : ""
"public.property_ownership" }o--|| "public.address" : ""
"public.property_ownership" |o--|| "public.registration_number" : ""
"public.property_ownership" |o--o| "public.license" : ""
"public.saved_journey_state" }o--|| "public.prsdb_user" : ""
"public.saved_journey_state" |o--o| "public.reminder_email_sent" : ""
"public.system_operator" |o--|| "public.prsdb_user" : ""
"public.virus_scan_callback" }o--|| "public.file_upload" : ""

"public.address" {
  varchar_255_ building_name
  varchar_255_ building_number
  timestamp_6__with_time_zone created_date
  bigint id
  boolean is_active
  timestamp_6__with_time_zone last_modified_date
  integer local_council_id FK
  varchar_255_ locality
  varchar_255_ organisation
  varchar_255_ postcode
  varchar_1000_ single_line_address
  varchar_255_ street_name
  varchar_500_ sub_building
  varchar_255_ town_name
  bigint uprn
}
"public.electrical_safety_uploads" {
  bigint electrical_safety_file_uploads_id FK
  bigint property_compliance_id FK
}
"public.file_upload" {
  timestamp_6__with_time_zone created_date
  varchar_255_ e_tag
  varchar_255_ extension
  varchar_255_ file_name
  bigint id
  timestamp_6__with_time_zone last_modified_date
  varchar_255_ object_key
  smallint status
  varchar_255_ version_id
}
"public.gas_safety_uploads" {
  bigint gas_safety_file_uploads_id FK
  bigint property_compliance_id FK
}
"public.joint_landlord_invitation" {
  timestamp_6__with_time_zone created_date
  bigint id
  boolean invitation_expired_email_sent
  varchar_255_ invited_email
  varchar_255_ inviting_landlord_name
  boolean is_hidden
  timestamp_6__with_time_zone last_modified_date
  bigint registered_propertyid FK
  uuid token
}
"public.landlord" {
  timestamp_6__with_time_zone created_date
  bigint id
  bigint individual_address_id FK
  varchar_255_ individual_country_of_residence
  date individual_date_of_birth
  varchar_255_ individual_email
  boolean individual_has_accepted_privacy_notice
  boolean individual_is_active
  boolean individual_is_verified
  varchar_255_ individual_name
  varchar_1000_ individual_non_england_or_wales_address
  varchar_255_ individual_phone_number
  varchar_255_ individual_subject_identifier FK
  smallint landlord_type
  timestamp_6__with_time_zone last_modified_date
  bigint organisation_address_id FK
  varchar_255_ organisation_charity_number
  smallint organisation_charity_registered_with
  varchar_255_ organisation_company_number
  varchar_255_ organisation_email
  boolean organisation_is_charity
  boolean organisation_is_company
  boolean organisation_is_trust
  varchar_255_ organisation_landlord_name
  bigint organisation_lead_trustee_address_id FK
  date organisation_lead_trustee_date_of_birth
  varchar_255_ organisation_lead_trustee_email
  varchar_255_ organisation_lead_trustee_name
  varchar_255_ organisation_lead_trustee_phone
  varchar_255_ organisation_main_contact_email
  varchar_255_ organisation_main_contact_name
  varchar_255_ organisation_main_contact_phone
  varchar_255_ organisation_phone_number
  date organisation_registrant_date_of_birth
  varchar_255_ organisation_registrant_email
  varchar_255_ organisation_registrant_name
  varchar_255_ organisation_registrant_phone_number
  bigint registration_number_id FK
}
"public.landlord_incomplete_properties" {
  bigint saved_journey_state_id FK
  varchar_255_ user_id FK
}
"public.license" {
  timestamp_6__with_time_zone created_date
  bigint id
  timestamp_6__with_time_zone last_modified_date
  varchar_255_ license_number
  smallint license_type
}
"public.local_council" {
  timestamp_6__with_time_zone created_date
  varchar_255_ custodian_code
  integer id
  timestamp_6__with_time_zone last_modified_date
  varchar_255_ name
}
"public.local_council_invitation" {
  timestamp_6__with_time_zone created_date
  bigint id
  boolean invited_as_admin
  varchar_255_ invited_email
  integer inviting_council_id FK
  uuid token
}
"public.local_council_user" {
  timestamp_6__with_time_zone created_date
  varchar_255_ email
  boolean has_accepted_privacy_notice
  bigint id
  boolean is_manager
  timestamp_6__with_time_zone last_modified_date
  integer local_council_id FK
  varchar_255_ name
  varchar_255_ subject_identifier FK
}
"public.local_council_user_or_invitation" {
  text entity_type
  bigint id
  boolean is_manager
  integer local_council_id
  varchar_255_ name
}
"public.organisation_governing_body_member" {
  bigint address_id FK
  timestamp_6__with_time_zone created_date
  date date_of_birth
  bigint id
  timestamp_6__with_time_zone last_modified_date
  varchar_255_ name
  bigint organisation_landlord_id FK
  smallint type
}
"public.organisational_landlord_user" {
  timestamp_6__with_time_zone created_date
  varchar_255_ email
  bigint id
  varchar_255_ name
  bigint organisation_landlord_id FK
  varchar_255_ subject_identifier FK
}
"public.ownership_link" {
  timestamp_6__with_time_zone created_date
  bigint id
  bigint landlord_id FK
  bigint landlordship_id FK
  timestamp_6__with_time_zone last_modified_date
}
"public.passcode" {
  timestamp_6__with_time_zone created_date
  timestamp_6__with_time_zone last_modified_date
  varchar_255_ passcode
  varchar_255_ subject_identifier FK
}
"public.property_compliance" {
  timestamp_6__with_time_zone created_date
  smallint electrical_cert_type
  boolean electrical_safety_cert_provide_later
  date electrical_safety_expiry_date
  varchar_255_ epc_energy_rating
  smallint epc_exemption_reason
  date epc_expiry_date
  smallint epc_mees_exemption_reason
  boolean epc_provide_later
  varchar_255_ epc_url
  date gas_safety_cert_issue_date
  boolean gas_safety_cert_provide_later
  boolean has_fire_safety_declaration
  boolean has_gas_supply
  boolean has_keep_property_safe_declaration
  boolean has_responsibility_to_tenants_declaration
  bigint id
  timestamp_6__with_time_zone last_modified_date
  bigint property_ownership_id FK
  boolean tenancy_started_before_epc_expiry
}
"public.property_ownership" {
  bigint address_id FK
  varchar bills_included_list
  timestamp_6__with_time_zone created_date
  integer current_num_households
  integer current_num_tenants
  varchar_255_ custom_bills_included
  varchar_255_ custom_property_type
  varchar_255_ custom_rent_frequency
  smallint furnished_status
  bigint id
  boolean is_active
  boolean is_active_duplicate_for_gist_index
  boolean is_occupied
  timestamp_6__with_time_zone last_modified_date
  date last_occupied_date
  bigint license_id FK
  boolean license_provide_later
  integer local_council_id
  boolean marked_joint_landlord
  integer num_bedrooms
  smallint ownership_type
  smallint property_build_type
  bigint registration_number_id FK
  numeric_9_2_ rent_amount
  smallint rent_frequency
  varchar_1000_ single_line_address
  boolean tenancy_provide_later
}
"public.prsdb_user" {
  timestamp_6__with_time_zone created_date
  varchar_255_ id
}
"public.registration_number" {
  timestamp_6__with_time_zone created_date
  bigint id
  bigint number
  smallint type
}
"public.reminder_email_sent" {
  bigint id
  timestamp_6__with_time_zone last_reminder_email_sent_date
}
"public.saved_journey_state" {
  timestamp_without_time_zone created_date
  bigint id
  varchar_255_ journey_id
  timestamp_without_time_zone last_modified_date
  bigint reminder_email_sent_id FK
  text serialized_state
  varchar_255_ subject_identifier FK
}
"public.system_operator" {
  timestamp_6__with_time_zone created_date
  bigint id
  timestamp_6__with_time_zone last_modified_date
  varchar_255_ subject_identifier FK
}
"public.virus_scan_callback" {
  timestamp_without_time_zone created_date
  varchar_1000_ encoded_callback_data
  bigint file_upload_id FK
  bigint id
  timestamp_without_time_zone last_modified_date
}
